--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-    "clientid": "MTI4ODUxNzYwMzMzNzE3OTE2Ng.GF-FHo.TQ_h7__AxbFnSaRttjxozOK3h-VMLHnQK-kihE"
+    "token": "MTI4ODUxNzYwMzMzNzE3OTE2Ng.GF-FHo.TQ_h7__AxbFnSaRttjxozOK3h-VMLHnQK-kihE",
+    "guildid": "1289659066746015785",
+    "clientid": "1288517603337179166"
 }
