--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -10,6 +10,8 @@ plugins:
 lavalink:
   plugins:
   - dependency: "dev.lavalink.youtube:youtube-plugin:1.8.3"
+  - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.0.0-beta.7" # adds support for spotify, deezer, yandexmusic, applemusic
+    repository: "https://maven.topi.wtf/releases"
   snapshot: false
 #    - dependency: "com.github.example:example-plugin:1.0.0" # required, the coordinates of your plugin
 #      repository: "https://maven.example.com/releases" # optional, defaults to the Lavalink releases repository by default
@@ -21,6 +23,7 @@ lavalink:
     password: "youshallnotpass"
     sources:
       # The default Youtube source is now deprecated and won't receive further updates. Please use https://github.com/lavalink-devs/youtube-source#plugin instead.
+      spotify: true
       youtube: false
       bandcamp: true
       soundcloud: true
