--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -2,17 +2,17 @@ server: # REST and WS server
   port: 2333
   address: 0.0.0.0
   http2:
-    enabled: true # Whether to enable HTTP/2 support
+    enabled: false # Whether to enable HTTP/2 support
 plugins:
-#  name: # Name of the plugin
-#    some_key: some_value # Some key-value pair for the plugin
-#    another_key: another_value
+   - dependency: "dev.lavalink.youtube:youtube-plugin:VERSION"
+
 lavalink:
   plugins:
-  - dependency: "dev.lavalink.youtube:youtube-plugin:1.8.3"
-  - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.0.0-beta.7" # adds support for spotify, deezer, yandexmusic, applemusic
-    repository: "https://maven.topi.wtf/releases"
-  snapshot: false
+  youtube:
+    enabled: true
+    allowSearch: true # Whether "ytsearch:" and "ytmsearch:" can be used.
+    allowDirectVideoIds: true # Whether just video IDs can match. If false, only complete URLs will be loaded.
+    allowDirectPlaylistIds: true
 #    - dependency: "com.github.example:example-plugin:1.0.0" # required, the coordinates of your plugin
 #      repository: "https://maven.example.com/releases" # optional, defaults to the Lavalink releases repository by default
 #      snapshot: false # optional, defaults to false, used to tell Lavalink to use the snapshot repository instead of the release repository
@@ -23,7 +23,6 @@ lavalink:
     password: "youshallnotpass"
     sources:
       # The default Youtube source is now deprecated and won't receive further updates. Please use https://github.com/lavalink-devs/youtube-source#plugin instead.
-      spotify: true
       youtube: false
       bandcamp: true
       soundcloud: true
