--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-    "token": "MTI4ODUxNzYwMzMzNzE3OTE2Ng.GF-FHo.TQ_h7__AxbFnSaRttjxozOK3h-VMLHnQK-kihE",
-    "guildid": "1252032458531143711",  
+    "token": "",
     "clientid": "1288517603337179166",
     "embed_color": "#000000"
 }
