--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -1,9 +1,17 @@
 server: # REST and WS server
-  port: 2333
+  port: 8090
   address: 0.0.0.0
   http2:
     enabled: false # Whether to enable HTTP/2 support
 plugins:
+   youtube:
+    enabled: true
+    allowSearch: true # Whether "ytsearch:" and "ytmsearch:" can be used.
+    allowDirectVideoIds: true # Whether just video IDs can match. If false, only complete URLs will be loaded.
+    allowDirectPlaylistIds: true
+    oauth:
+      enabled: true
+      refreshToken: ''
    lavasrc:
     providers: # Custom providers for track loading. This is the default
       # - "dzisrc:%ISRC%" # Deezer ISRC provider
@@ -40,13 +48,7 @@ lavalink:
   plugins:
     - dependency: "dev.lavalink.youtube:youtube-plugin:1.8.3"
     - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.3.0"
-  youtube:
-    enabled: true
-    allowSearch: true # Whether "ytsearch:" and "ytmsearch:" can be used.
-    allowDirectVideoIds: true # Whether just video IDs can match. If false, only complete URLs will be loaded.
-    allowDirectPlaylistIds: true
-    oauth:
-      enabled: true
+  
 #    - dependency: "com.github.example:example-plugin:1.0.0" # required, the coordinates of your plugin
 #      repository: "https://maven.example.com/releases" # optional, defaults to the Lavalink releases repository by default
 #      snapshot: false # optional, defaults to false, used to tell Lavalink to use the snapshot repository instead of the release repository
@@ -54,7 +56,7 @@ lavalink:
 #  defaultPluginRepository: "https://maven.lavalink.dev/releases" # optional, defaults to the Lavalink release repository
 #  defaultPluginSnapshotRepository: "https://maven.lavalink.dev/snapshots" # optional, defaults to the Lavalink snapshot repository
   server:
-    password: "youshallnotpass"
+    password: "lavalinkv4"
     sources:
       # The default Youtube source is now deprecated and won't receive further updates. Please use https://github.com/lavalink-devs/youtube-source#plugin instead.
       youtube: false
@@ -118,11 +120,10 @@ sentry:
 logging:
   file:
     path: ./logs/
-
   level:
     root: INFO
     lavalink: INFO
-
+    dev.lavalink.youtube.http.YoutubeOauth2Handler: INFO
   request:
     enabled: true
     includeClientInfo: true
